tests/rosetta/transpiler/Zig/arithmetic-integer-2.error
zig build: exit status 1
/tmp/arithmetic-integer-2.zig:9:19: error: expected 3 argument(s), found 2
/tmp/zig-0.12.0/lib/std/mem.zig:3148:5: note: function declared here
